[package]
name = "prettythanks"
version = "0.1.0"
edition = "2021"
authors = ["Bigo <bigo@crisidev.org>"]
description = "A simple frontend to dtolnay/prettyplease library"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/crisidev/pretty-thanks"
categories = [
    "command-line-utilities",
    "development-tools",
    "filesystem",
    "text-processing",
]
keywords = ["formatting", "pretty", "cmdline", "ast", "cargo-fmt"]

[dependencies]
argh = { version = "0.1" }
camino = { version = "1.1", default-features = false }
prettyplease = "0.2"
syn = { version = "2.0", default-features = false, features = ["parsing"] }
